--- a/tutorial_TeX/RB_DivergenceTimeSimple_Tutorial/RB_DivergenceTimeSimple_Tutorial.tex
+++ b/tutorial_TeX/RB_DivergenceTimeSimple_Tutorial/RB_DivergenceTimeSimple_Tutorial.tex
@@ -10,7 +10,7 @@
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Calibrated Time Trees \& Divergence Time Estimation}}\\\vspace{2mm}
+\textbf{\it{\Large An introduction to Calibrated Time Trees \& Divergence Time Estimation}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Sebastian H{\"o}hna and Tracy A. Heath}
 \vspace{1cm}
