minor edit to tutorial

--- a/tutorial_TeX/RB_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content.tex
+++ b/tutorial_TeX/RB_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content.tex
@@ -213,7 +213,7 @@ death_rate := (turnover * diversification) / (denom)
 
 \textbf{\textit{Sampling Probability}}
 
-Fix the probability of sampling to a known value. Since there are approximately 147 described caniform species, we will create a constant node for this parameter.
+Fix the probability of sampling to a known value. Since there are approximately 147 described caniform species, we will create a constant node for this parameter that is equal to 10/147.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 rho <- 0.068
