Updating tutorial tex and pdf's

--- a/tutorial_TeX/RB_Basics_Tutorial/refs.bib
+++ b/tutorial_TeX/RB_Basics_Tutorial/refs.bib
@@ -24,6 +24,16 @@
 @String { TEE       = {Trends in Ecology \& Evolution} }
 @String { TPB       = {Theoretical Population Biology} }
 
+@Book{Gelman2003,
+  Title                    = {Bayesian data analysis},
+  Author                   = {Gelman, A. and Carlin, J.B. and Stern, H.S. and Rubin, D.B.},
+  Publisher                = {Chapman \& Hall/CRC},
+  Year                     = {2003},
+
+  Owner                    = {hoehna},
+  Timestamp                = {2012.10.01}
+}
+
 @Article{Gilks1994,
   Title                    = {{A language and program for complex Bayesian modelling}},
   Author                   = {Gilks, WR and Thomas, A. and Spiegelhalter, DJ},
