--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -23,9 +23,9 @@
 \author{
 Sebastian H{\"o}hna,
 %\and
-Tracy A. Heath,
-%\and
 Michael J. Landis,
+%\and
+Tracy A. Heath,
 %\and
 Bastien Boussau,
 %\and
@@ -73,9 +73,12 @@ John P. Huelsenbeck
 
 
 
+
+
 \part{Inference}
 
 \chapter{Markov chain Monte Carlo Algorithms}
+\def \ResourcePath {RB_MCMC_Tutorial/}
 \include{RB_MCMC_Tutorial/RB_MCMC_Tutorial_content}
 
 \chapter{Model Selection and Bayes Factors}
@@ -83,10 +86,25 @@ John P. Huelsenbeck
 \include{RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content}
 
 
+
+
+
 \part{Dating}
-\chapter{Dating and Relaxed Clocks}
-\def \ResourcePath {RB_RelaxedClock_Tutorial/}
-\include{RB_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content}
+\chapter{Divergence Time Estimation}
+\def \ResourcePath {RB_DivergenceTime_Tutorial/}
+\include{RB_DivergenceTime_Tutorial/RB_DivergenceTime_Tutorial_content}
+
+\chapter{Node Calibration}
+\def \ResourcePath {RB_NodeCalibration_Tutorial/}
+\include{RB_NodeCalibration_Tutorial/RB_NodeCalibration_Tutorial_content}
+
+\chapter{Dating, Calibration and Relaxed Clocks}
+\def \ResourcePath {RB_Calibration_and_RelaxedClock_Tutorial/}
+\include{RB_Calibration_and_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content}
+
+
+
+
 
 
 \part{Diversification Rate Estimation}
@@ -95,17 +113,33 @@ John P. Huelsenbeck
 \include{RB_SimpleDiversification_Tutorial/RB_SimpleDiversification_Tutorial_content}
 
 
+
+
+
 \part{Gene tree - Species tree estimation}
-\chapter{Gene tree - Species tree estimation}
-\def \ResourcePath {RB_GTST_Tutorial/}
-\include{RB_GTST_Tutorial/RB_GTST_Tutorial_content}
+\chapter{Multispecies Coalescent}
+\def \ResourcePath {RB_MultispeciesCoalescent_Tutorial/}
+\include{RB_MultispeciesCoalescent_Tutorial/RB_MultispeciesCoalescent_Tutorial_content}
+
+
+
 
 
 
 \part{Biogeography}
+
+\chapter{Dispersal, Extirpation and Cladogenesis (DEC)}
+\def \ResourcePath {RB_Biogeography_DEC_Tutorial/}
+\include{RB_Biogeography_DEC_Tutorial/RB_Biogeography_DEC_Tutorial_content}
+
 \chapter{Many Area DEC}
-\def \ResourcePath {RB_Biogeography_Tutorial/}
-\include{RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_content}
+\def \ResourcePath {RB_Biogeography_many_area_Tutorial/}
+\include{RB_Biogeography_many_area_Tutorial/RB_Biogeography_many_area_Tutorial_content}
+
+
+
+
+
 
 
 \part{Phylogenetic Comparative Method}
