--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -109,21 +109,28 @@
 \hypersetup{colorlinks=true,linkcolor=linkscol,citecolor=citescol,urlcolor=urlscol}
 
 
-\newcommand{\R}{\texttt{R}}
-\newcommand{\TESS}{\texttt{TESS}}
-\newcommand{\PBD}{\texttt{PBD}}
-\newcommand{\DDD}{\texttt{DDD}}
-\newcommand{\Laser}{\texttt{laser}}
-\newcommand{\TreePar}{\texttt{TreePar}}
-\newcommand{\diversitree}{\texttt{diversitree}}
-\newcommand{\RevBayes}{\texttt{RevBayes}}
-\newcommand{\Rev}{\texttt{Rev}}
-\newcommand{\MrBayes}{\texttt{MrBayes}}
-\newcommand{\BEAST}{\texttt{BEAST}}
-\newcommand{\PhyloBayes}{\texttt{PhyloBayes}}
-\newcommand{\PAML}{\texttt{PAML}}
-\newcommand{\Phylowood}{\texttt{Phylowood}}
-\newcommand{\Tracer}{\texttt{Tracer}}
+% Abbreviations
+\usepackage{xspace}
+\newcommand{\IE}{{\it i.e.,}\xspace}
+\newcommand{\EG}{{\it e.g.,}\xspace}
+\newcommand{\CF}{{\it cf.}\xspace}
+\newcommand{\IID}{i.i.d.\xspace}
+
+\newcommand{\R}{\texttt{R}\xspace}
+\newcommand{\TESS}{\texttt{TESS}\xspace}
+\newcommand{\PBD}{\texttt{PBD}\xspace}
+\newcommand{\DDD}{\texttt{DDD}\xspace}
+\newcommand{\Laser}{\texttt{laser}\xspace}
+\newcommand{\TreePar}{\texttt{TreePar}\xspace}
+\newcommand{\diversitree}{\texttt{diversitree}\xspace}
+\newcommand{\RevBayes}{\texttt{RevBayes}\xspace}
+\newcommand{\Rev}{\texttt{Rev}\xspace}
+\newcommand{\MrBayes}{\texttt{MrBayes}\xspace}
+\newcommand{\BEAST}{\texttt{BEAST}\xspace}
+\newcommand{\PhyloBayes}{\texttt{PhyloBayes}\xspace}
+\newcommand{\PAML}{\texttt{PAML}\xspace}
+\newcommand{\Phylowood}{\texttt{Phylowood}\xspace}
+\newcommand{\Tracer}{\texttt{Tracer}\xspace}
 
 
 \let\otheriint\iint
@@ -183,11 +190,6 @@
 \newcommand{\rbdn}{{\Large \symbol{126}}} % This makes a copy/pasteable tilde
 \newcommand{\rbclml}[1]{\exs{\cl{\ \ \ \ \ \ \ \ \ \ \ {#1}}}}
 
-% Abbreviations
-\newcommand{\IE}{i.e., }
-\newcommand{\EG}{e.g., }
-\newcommand{\CF}{cf. }
-\newcommand{\IID}{i.i.d. }
 
 
 % text box settings
