--- a/tutorial_TeX/RB_Calibration_and_RelaxedClock_Tutorial/RB_Calibration_and_RelaxedClock_Tutorial.tex
+++ b/tutorial_TeX/RB_Calibration_and_RelaxedClock_Tutorial/RB_Calibration_and_RelaxedClock_Tutorial.tex
@@ -5,21 +5,24 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Data Partitioning}}
+\rhead{\textsc {\RevBayes~Tutorial --- Relaxed-Clocks and Calibrated Time Trees}}
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Partitioned data analyses}}\\\vspace{2mm}
+\textbf{\it{\Large Relaxed-Clocks \& Calibrated Time Trees}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Brian R.~Moore, Michael J.~Landis and Sebastian H{\"o}hna}
+{\Large Tracy A. Heath}
 \vspace{1cm}
-\end{center}
 
+
+\end{center}
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_Partition_Tutorial_content}
+\input{RB_Calibration_and_RelaxedClock_Tutorial_content}
+
+Version dated: \today
 
 
 \end{document}
