--- a/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial_content.tex
@@ -105,7 +105,7 @@ Now, on to the MH algorithm:
 We will call the set of model parameters $\theta$. The initial parameter values might be specified arbitrarily, or might be drawn from the corresponding prior probability density for each parameter.}
 
 \item{Select a single parameter (or set of parameters) to alter according to its proposal probability. 
-For example, here are the default proposal probabilities used by \verb!MrBayes!\:
+For example, here are the default proposal probabilities used by \MrBayes:
 {\tt \scriptsize \begin{framed}
 \begin{lstlisting}
       The MCMC sampler will use the following moves:
@@ -497,22 +497,4 @@ For example, a correlation between \texttt{Likelihood} and \texttt{Posterior} is
 
 There are additional bonsai reports for more complex models demonstrating a wider array of MCMC pathologies in the \verb!.../RB_MCMC_Tutorial/bonsai_pre_cooked! directory.
 
-\bigskip
-\section*{Useful Links}
-
-\begin{itemize}
-\item RevBayes: \href{https://github.com/revbayes/code}{https://github.com/revbayes/code} \\ \vspace{-7mm}
-\item MrBayes: \href{http://mrbayes.sourceforge.net/}{http://mrbayes.sourceforge.net} \\ \vspace{-7mm}
-\item bonsai: \href{https://bitbucket.org/mrmay/bonsai/overview}{https://bitbucket.org/mrmay/bonsai/overview} \\  \vspace{-7mm}
-\item Tracer: \href{http://tree.bio.ed.ac.uk/software/tracer/}{http://tree.bio.ed.ac.uk/software/tracer/} \\ \vspace{-7mm}
-\item AWTY: \href{http://king2.scs.fsu.edu/CEBProjects/awty/awty_start.php}{ceb.csit.fsu.edu/awty/} \\ \vspace{-7mm}
-\item coda: \href{http://cran.r-project.org/web/packages/coda/index.html}{http://cran.r-project.org/web/packages/coda/index.html} \\ \vspace{-7mm}
-\item Tree Thinkers: \href{http://treethinkers.org/}{http://treethinkers.org} \\ \vspace{-7mm}
-\end{itemize}
-
-Questions about this tutorial can be directed to: \\\vspace{-10mm}
-\begin{itemize}
-\item Sebastian H\"{o}hna (email: \href{mailto:sebastian.hoehna@gmail.com}{sebastian.hoehna@gmail.com}) \\ \vspace{-7mm}
-\item Mike R. May (email: \href{mailto:mrmay@ucdavis.edu}{mrmay@ucdavis.edu}) \\ \vspace{-7mm}
-\item Brian R. Moore (email: \href{mailto:brianmoore@ucdavis.edu}{brianmoore@ucdavis.edu}) \\\vspace{-8mm}
-\end{itemize}
+\definecolor{shadecolor}{RGB}{238,224,229}
