--- a/tutorial_TeX/RB_Biogeography_DEC_Tutorial/RB_Biogeography_DEC_Tutorial.tex
+++ b/tutorial_TeX/RB_Biogeography_DEC_Tutorial/RB_Biogeography_DEC_Tutorial.tex
@@ -5,21 +5,23 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Gene tree-species tree reconstruction}}
+\rhead{\textsc {\RevBayes~Tutorial --- Biogeographic Analysis using DEC}}
 
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Gene tree-species tree reconstruction}}\\\vspace{2mm}
+\textbf{\it{\Large Historical biogeography}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Bastien Boussau and Sebastian H{\"o}hna}
+{\Large Michael Landis}
 \vspace{1cm}
 \end{center}
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_GTSTSimple_Tutorial_content}
+\input{RB_Biogeography_DEC_Tutorial_content}
+
+\bibliography{bayes}
 
 Version dated: \today
 
