--- a/tutorial_TeX/RB_Biogeography_many_area_Tutorial/RB_Biogeography_many_area_Tutorial.tex
+++ b/tutorial_TeX/RB_Biogeography_many_area_Tutorial/RB_Biogeography_many_area_Tutorial.tex
@@ -5,21 +5,25 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Data Partitioning}}
+\rhead{\textsc {\RevBayes~Tutorial --- Biogeographic Analysis for many areas}}
+
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Partitioned data analyses}}\\\vspace{2mm}
+\textbf{\it{\Large Historical biogeography for many areas}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Brian R.~Moore, Michael J.~Landis and Sebastian H{\"o}hna}
+{\Large Michael Landis}
 \vspace{1cm}
 \end{center}
 
-
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_Partition_Tutorial_content}
+\input{RB_Biogeography_many_area_Tutorial_content}
+
+\bibliography{bayes}
+
+Version dated: \today
 
 
 \end{document}
