--- a/tutorial_TeX/RB_DivergenceTime_Tutorial/RB_DivergenceTime_Tutorial.tex
+++ b/tutorial_TeX/RB_DivergenceTime_Tutorial/RB_DivergenceTime_Tutorial.tex
@@ -5,14 +5,14 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Relaxed-Clocks and Calibrated Time Trees}}
+\rhead{\textsc {\RevBayes~Tutorial --- Time Trees and Divergence Time Estimation}}
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Relaxed-Clocks \& Calibrated Time Trees}}\\\vspace{2mm}
+\textbf{\it{\Large An introduction to Calibrated Time Trees \& Divergence Time Estimation}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Tracy A. Heath}
+{\Large Sebastian H{\"o}hna and Tracy A. Heath}
 \vspace{1cm}
 
 
@@ -20,7 +20,7 @@
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_RelaxedClock_Tutorial_content}
+\input{RB_DivergenceTime_Tutorial_content}
 
 Version dated: \today
 
