--- a/tutorial_TeX/RB_MultispeciesCoalescent_Tutorial/RB_MultispeciesCoalescent_Tutorial.tex
+++ b/tutorial_TeX/RB_MultispeciesCoalescent_Tutorial/RB_MultispeciesCoalescent_Tutorial.tex
@@ -5,22 +5,21 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Calibrated Time Trees and Divergence Time Estimation}}
+\rhead{\textsc {\RevBayes~Tutorial --- Gene tree-species tree reconstruction using the multispecies coalescent}}
+
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large An introduction to Calibrated Time Trees \& Divergence Time Estimation}}\\\vspace{2mm}
+\textbf{\it{\Large Gene tree-species tree reconstruction using the multispecies coalescent}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna and Tracy A. Heath}
+{\Large Bastien Boussau and Sebastian H{\"o}hna}
 \vspace{1cm}
-
-
 \end{center}
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_DivergenceTimeSimple_Tutorial_content}
+\input{RB_MultispeciesCoalescent_Tutorial_content}
 
 Version dated: \today
 
